# mpc

./: .gitignore  README.md
_site/: README.md
_site/docs/: README.md
_site/src/mpc/: mpc.hpp
docs/: Doxyfile  README.md  _config.yml  about.md  index.html
docs/_includes/: about.html  api.html  contact.html  download.html  head.html  nav.html  userguide.html
docs/_includes/css/: grayscale.css
docs/_includes/userguidemdfiles/: 000_introduction.md
docs/_layouts/: default.html  style.css
docs/_posts/: 2018-09-16-mpc.md
docs/_site/: index.html  style.css
docs/category/: api.md  user-guide.md
docs/html/: _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  accumulator_8hpp.html  accumulator_8hpp_source.html  annotated.html  arithmeticaverage_8hpp.html  arithmeticaverage_8hpp_source.html  blitz2eigen_8hpp.html  blitz2eigen_8hpp_source.html  classes.html  classmpc_1_1core_1_1_c_tensor_rank2_component_index-members.html  classmpc_1_1core_1_1_c_tensor_rank2_component_index.html  classmpc_1_1core_1_1_c_tensor_rank4_component_index-members.html  classmpc_1_1core_1_1_c_tensor_rank4_component_index.html  classmpc_1_1core_1_1_tensor_rank_n_component-members.html  classmpc_1_1core_1_1_tensor_rank_n_component.html  classmpc_1_1core_1_1_tensor_rank_n_component_index.html  classmpc_1_1core_1_1_tensor_rank_n_component_index_3_012_01_4-members.html  classmpc_1_1core_1_1_tensor_rank_n_component_index_3_012_01_4.html  classmpc_1_1core_1_1_tensor_rank_n_component_index_3_014_01_4-members.html  classmpc_1_1core_1_1_tensor_rank_n_component_index_3_014_01_4.html  classmpc_1_1rockphysics_1_1_fluid_phase-members.html  classmpc_1_1rockphysics_1_1_fluid_phase.html  classmpc_1_1rockphysics_1_1_scalar_composites_base-members.html  classmpc_1_1rockphysics_1_1_scalar_composites_base.html  classmpc_1_1rockphysics_1_1_solid_phase-members.html  classmpc_1_1rockphysics_1_1_solid_phase.html  constants_8hpp.html  constants_8hpp_source.html  coordinatemapping_8hpp.html  coordinatemapping_8hpp_source.html  core_2_r_e_a_d_m_e_8md.html  core_2_r_e_a_d_m_e_8md_source.html  csrelationship_8hpp.html  csrelationship_8hpp_source.html  cstypes_8hpp.html  cstypes_8hpp_source.html  dir_157c969c56a3a97f399ab8d7962ece44.html  dir_3af051c544b8fb863edbf3fea27fc9da.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+539 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+66 more)
docs/js/: grayscale.js
docs/latex/: _r_e_a_d_m_e_8md.tex  accumulator_8hpp.tex  annotated.tex  arithmeticaverage_8hpp.tex  blitz2eigen_8hpp.tex  classmpc_1_1core_1_1_c_tensor_rank2_component_index.tex  classmpc_1_1core_1_1_c_tensor_rank4_component_index.tex  classmpc_1_1core_1_1_tensor_rank_n_component.tex  classmpc_1_1core_1_1_tensor_rank_n_component_index.tex  classmpc_1_1core_1_1_tensor_rank_n_component_index_3_012_01_4.tex  classmpc_1_1core_1_1_tensor_rank_n_component_index_3_014_01_4.tex  classmpc_1_1rockphysics_1_1_fluid_phase.eps  classmpc_1_1rockphysics_1_1_fluid_phase.tex  classmpc_1_1rockphysics_1_1_scalar_composites_base.tex  classmpc_1_1rockphysics_1_1_solid_phase.eps  classmpc_1_1rockphysics_1_1_solid_phase.tex  constants_8hpp.tex  coordinatemapping_8hpp.tex  core_2_r_e_a_d_m_e_8md.tex  csrelationship_8hpp.tex  cstypes_8hpp.tex  dir_157c969c56a3a97f399ab8d7962ece44.tex  dir_3af051c544b8fb863edbf3fea27fc9da.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_712636449a5483948ded8c2d328da3ae.tex  dir_9abe36d6ec6970fd7fa3b3af6616ad74.tex  dir_cb9da9af2847afd01b39c43d5def3b60.tex  dir_d39f463dbb3cbbfe98be0ca0963be78a.tex  dir_dc19695673459d8bbbd63cc082865584.tex  eigen2blitz_8hpp.tex  empiricalrelationships_8hpp.tex  eulerrotation_8hpp.tex  exactpolynomialroots_8hpp.tex  files.tex  functionsbase_8hpp.tex  greenchristoffel_8hpp.tex  harmonicaverage_8hpp.tex  hierarchy.tex  hookeslaw_8hpp.tex  identitytensor_8hpp.tex  (+269 more)
exampleapp/: CMakeLists.txt  csrelationshipsview.cpp  csrelationshipsview.h  fluidphaseview.cpp  fluidphaseview.h  fluidphaseview2.cpp  fluidphaseview2.h  greenchristoffelnormalvectorview.cpp  greenchristoffelnormalvectorview.h  homepage.cpp  homepage.h  main.cpp  mainwindow.cpp  mainwindow.h  mineraldataview.cpp  mineraldataview.h  mineralvelsview.cpp  mineralvelsview.h  mixinglawsview.cpp  mixinglawsview.h  solidphaseview.cpp  solidphaseview.h  solidphaseview2.cpp  solidphaseview2.h  transformationview.cpp  transformationview.h
examples/: CMakeLists.txt  README.md  arraysandtensors.hpp  main.cpp  mpcx_accumulator.cpp  mpcx_accumulator.hpp  mpcx_arithmeticaverage.cpp  mpcx_arithmeticaverage.hpp  mpcx_constants.cpp  mpcx_constants.hpp  mpcx_coordinatemapping.cpp  mpcx_coordinatemapping.hpp  mpcx_eulerangles.cpp  mpcx_eulerangles.hpp  mpcx_fluidphase.cpp  mpcx_fluidphase.hpp  mpcx_greenchristoffel.cpp  mpcx_greenchristoffel.hpp  mpcx_harmonicaverage.cpp  mpcx_harmonicaverage.hpp  mpcx_hookeslaw_csrelationship.cpp  mpcx_hookeslaw_csrelationship.hpp  mpcx_innerproductor.cpp  mpcx_innerproductor.hpp  mpcx_kdeltaidentitytensor.cpp  mpcx_kdeltaidentitytensor.hpp  mpcx_magandnorm.cpp  mpcx_magandnorm.hpp  mpcx_mineraldata.cpp  mpcx_mineraldata.hpp  mpcx_mixinglaws.cpp  mpcx_mixinglaws.hpp  mpcx_moreeulerangles.cpp  mpcx_moreeulerangles.hpp  mpcx_orientationdistribution.cpp  mpcx_orientationdistribution.hpp  mpcx_printtensorcomponents.cpp  mpcx_printtensorcomponents.hpp  mpcx_quartzvelsinX0X1plane.cpp  mpcx_quartzvelsinX0X1plane.hpp  (+23 more)
examples/markdown/: core.md  data.md  mechanics.md  rockphysics.md  transformation.md  utilities.md
src/mpc/: README.md  mpc.cpp  mpc.hpp
src/mpc/core/: .directory  README.md  csrelationship.hpp  cstypes.hpp  kmurho.hpp  stiffnesscompliance.hpp  stressstrain.hpp  (+8 more)
(+77 files in other folders)
